--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ jobs:
         - ./.travis.gofmt.sh
         - ./.travis.govet.sh
         - ./.travis.golint.sh
+        - ./.travis.gocyclo.sh
 
 stages:
   - style
