--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,22 @@ go:
 
 jobs:
   include:
-    - before_install: go build
-      script:
-        - go test -coverprofile coverage.out $(go list ./... | grep -v tests)
-        - go tool cover -func=coverage.out
     - stage: style
       script:
         - ./.travis.gofmt.sh
         - ./.travis.govet.sh
         - ./.travis.golint.sh
         - ./.travis.gocyclo.sh
+    - stage: unit tests
+      before_script: go build
+      script:
+        - go test -coverprofile coverage.out $(go list ./... | grep -v tests)
+        - go tool cover -func=coverage.out
+    - stage: REST API tests
+      script:
+        - ./test.sh
 
 stages:
   - style
-  - test
+  - unit tests
+  - REST API tests
