--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,10 @@ jobs:
   include:
     - stage: style
       script:
-        - ./.travis.gofmt.sh
-        - ./.travis.govet.sh
-        - ./.travis.golint.sh
-        - ./.travis.gocyclo.sh
+        - make style
     - stage: unit tests
-      before_script: go build
       script:
-        - go test -coverprofile coverage.out $(go list ./... | grep -v tests)
+        - make test
         - go tool cover -func=coverage.out
     - stage: REST API tests
       script:
