--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 # CCX Processing team members are the default owners of the repository
-* @quarckster @tisnik @Bee-lee @JoseLSegura @dpensi @lobziik @matysek @epapbak
+* @tisnik @Bee-lee @JoseLSegura @dpensi @lobziik @matysek @epapbak @JiriPapousek
